apps/site/src/styles/global.css
/* ... */
.experience-resume {
  article {
    display: flex;
    flex-direction: colum;
  }

  .experience-resume_title {
    display: flex;
    flex-direction: column;
    gap: var(--space-3xs);

    font-size: var(--font-0);
    font-weight: 600;
    margin-bottom: var(--space-sm);

    span {
      color: var(--fs-green);
    }

    p {
      color: var(--fs-secondary);
      font-size: var(--font--1);
      font-weight: 400;
    }
  }

  .experience-resume_text {
    font-size: var(--font--1);
    overflow: auto;

    ul,
    ol,
    il {
      padding: 0;
      margin: 0;
      list-style: none;

      li {
        position: relative;
        padding-left: var(--space-sm);
        margin-bottom: var(--space-xs);
        list-style-type: "𐰷 ";

        &::before {
          content: "𐰷 ";
          position: absolute;
          left: 0;
          color: var(--green);
        }
      }
    }
  }

  @media (min-width: 1201px) {
    .experience-resume_text {
      height: 51vh;
    }
  }
}

#under-construction {
  flex-direction: column;

  div {
    max-width: 580px;
    max-height: 450px;
  }

  @media (max-width: 435px) {
    div {
      picture {
        img {
          max-width: 380px;
          max-height: 250px;
        }
      }
    }
  }

  @media (min-width: 768px) {
    place-self: center;
    justify-content: center;
    padding-bottom: 0;
  }
}

#projects {
  flex-direction: column;
  padding: var(--space-3xl) var(--space-lg);

  @media (min-width: 1201px) {
    max-width: 1178px;
    place-self: center;
    gap: var(--space-2xl);
  }
}

.projects-grid {
  display: flex;
  flex-direction: column;
  gap: var(--space-xl);
}

.projects-unit {
  position: relative;
  display: grid;
  grid-template-columns: repeat(12, 1fr);
  align-items: stretch;
  /* fix resizing following the screen width */
  gap: var(--space-md);
  transition: 0.2s;

  &:hover,
  &:focus-visible {
    box-shadow: 0px 10px 30px -15px rgba(0, 0, 0, 0.15);
  }

  &:nth-of-type(odd) {
    @media (min-width: 768px) {
      .projects-unit-card {
        grid-column: 5 / -1;

        .projects-unit-card_stack,
        .projects-unit-card_links,
        .projects-unit-card_title {
          justify-content: flex-end;
          align-items: flex-end;
        }

        .projects-unit-card_title {
          div {
            flex-direction: row-reverse;
          }
        }
      }

      .projects-unit-image {
        grid-column: 1 / 9;
      }
    }
  }

  @media (min-width: 768px) {

    &:hover,
    &:focus-visible {
      box-shadow: none;
    }
  }
}

.projects-unit-card {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  grid-column: 1 / -1;
  grid-row: 1;
  gap: var(--space-sm);
  z-index: 5;

  padding: var(--space-lg);

  .projects-unit-card_title {
    display: flex;
    flex-direction: column;
    align-items: start;
    gap: var(--space-2xs);
    font-size: var(--font-2);
    font-weight: 700;
    transition: 0.2s;

    h3 {
      transition: 0.2s;

      a {
        display: flex;
        align-items: center;
        gap: var(--space-xs);
        cursor: pointer;
        transition: 0.2s;
      }

      &:hover {
        color: var(--fs-green);
      }
    }

    div {
      display: flex;
      align-items: center;
      gap: var(--space-xs);
      font-size: var(--font--1);
      font-weight: normal;
      transition: 0.2s;

      strong {
        color: var(--fs-green);
      }
    }
  }

  .projects-unit-card_text {
    position: relative;
    z-index: 2;

    @media (min-width: 768px) {
      background-color: var(--secondary);
      padding: var(--space-md);
      transition: 0.2s;

      &:hover {
        box-shadow: 0px 10px 30px -15px rgba(0, 0, 0, 0.15);
      }
    }
  }

  .projects-unit-card_stack {
    display: flex;
    align-items: center;
    gap: var(--space-sm);

    list-style: none;
    font-size: var(--font--2);
    color: var(--fs-secondary);

    li {
      transition: 0.2s;

      &:hover {
        color: var(--fs-green);
      }
    }
  }

  .projects-unit-card_links {
    display: flex;
    align-items: center;
    gap: var(--space-xs);

    a {
      color: var(--fs-primary);
      text-decoration: none;
      transition: 0.2s;

      &:hover {
        color: var(--fs-green);
      }
    }
  }

  @media (min-width: 768px) {
    grid-column: 1 / 9;
    grid-row: 1 / -1;
    padding: 0;
    margin: var(--space-md) var(--space-lg);
  }
}

.projects-unit-image {
  position: relative;
  display: grid;
  grid-column: 1 / -1;
  grid-row: 1;
  z-index: 1;
  opacity: 0.1;

  span {
    background-color: var(--green);
    border: 1px solid var(--grey-dark);
    border-radius: var(--radius-sm);
    box-shadow: 0 10px 30px -15px rgba(0, 0, 0, 0.15);
    transition: 0.5s;

    &::before {
      width: 100%;
      height: 100%;
      content: "";
      position: absolute;
      top: 0;
      left: 0;
      right: 0;
      bottom: 0;
      z-index: 3;
      background-color: var(--secondary);
      border-radius: var(--radius-sm);
      mix-blend-mode: screen;
    }

    &:hover,
    &:focus {
      background: transparent;
      outline: 0;

      &::before,
      img {
        background: transparent;
        filter: none;
        /* animation: spazz 0.2s; */
      }
    }
  }

  img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center;
    border-radius: var(--radius-sm);
    filter: grayscale(100%) contrast(1) brightness(90%);
  }

  @media (min-width: 768px) {
    grid-column: 5 / -1;
    grid-row: 1 / -1;
    opacity: 1;
    z-index: 4;

    span {
      border: none;

      &:hover {
        cursor: pointer;
      }
    }

    img {
      mix-blend-mode: multiply;
      filter: grayscale(100%) contrast(1) brightness(50%);
    }
  }
}
/* ... */

